examples/test/testpolicy1314.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1314
  namespace: namespace352
spec:
  podSelector:
    matchLabels:
      key33: value49
      key20: value13
      key42: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value16
          key34: value22
      podSelector:
        matchLabels:
          key36: value16
          key37: value33
